--- a/web/react/bywear/src/assets/sass/layout/_navigation.scss
+++ b/web/react/bywear/src/assets/sass/layout/_navigation.scss
@@ -13,6 +13,7 @@
     flex-direction: row-reverse;
     justify-content: flex-start;
     padding: 2rem 4rem;
+    position: fixed;
   }
 
   &__icon {
